Did some challanges and Looked some more through Notes

--- a/journals/2024_12_05.md
+++ b/journals/2024_12_05.md
@@ -184,7 +184,6 @@
 			- Return and Break break out of the statement, Return gives a value on exit while break doesn't.
 			- Fall through behaviour eg case 2 in example, meaning the statement will match and then fall through until it finds break.
 	- ## [[Exercises]]
-	  collapsed:: true
 		- [[Exercise 1]]
 			- Task
 			  collapsed:: true
@@ -258,4 +257,76 @@
 				  You must use a switch statement
 			- Answer:
 			  ```javascript
+			  function difficulty(input){
+			      switch(level){
+			          case 1:
+			              return "Easy";
+			          case 2:
+			              return "Medium";
+			          case 3:
+			              return "Hard";
+			          default:
+			              return "Error";
+			      }
+			  }
 			  ```
+		- [[Challenges]]
+			- [[FizzBuzz Challange]]
+				- Task:
+					- Write a program that prints numbers from 1 to 100.
+					- For multiples of 3, print `"Fizz"` instead of the number.
+					- For multiples of 5, print `"Buzz"`.
+					- For numbers divisible by both, print `"FizzBuzz"`.
+				- Answer:
+				  ```javascript
+				  for(let i = 0; i < 101;  i++){
+				      console.log(
+				          i % 3 == 0 & i % 5 == 0 
+				          ? "FizzBuzz"
+				          : i % 3 == 0 
+				          ? "Fizz" 
+				          : i % 5 == 0  
+				          ? "Buzz": i
+				      );
+				  }
+				  ```
+			- [[Palindrome Checker]]
+				- Task:
+					- Write a function that takes a string as input and checks whether it is a palindrome (reads the same backward as forward).
+					  Example input/output:
+					  `"madam"` → `true`, `"hello"` → `false`
+				- Answer:
+				  ```javascript
+				  function palidromeChecker(inputString){
+				      return inputString == inputString.split("").reverse().join("");
+				  }
+				  ```
+			- [[Random Number Game]]
+				- Task:
+					- Write a program that generates a random number between 1 and 10 and asks the user to guess it.
+					- Provide feedback if their guess is too high or too low.
+					- End the game once they guess correctly.
+				- Answer:
+				  ```javascript
+				  const readline = require('readline');
+				  
+				  const rl = readline.createInterface({
+				      input: process.stdin,
+				      output: process.stdout
+				  });
+				  
+				  let random = Math.floor(Math.random() * 10) + 1;
+				  
+				  function askQuestion(){
+				      rl.question("Guess number between 1 and 10: ", (input) => {
+				          const guess = parseInt(input);
+				          let outcome = input == random ? "You win!" : input > random ? "Too High":"Too Low";
+				          console.log(outcome);
+				          if(outcome !=  "You win!"){
+				              askQuestion();
+				          } else  {
+				              rl.close();
+				          }
+				      })
+				  }
+				  ```
