Error Handling, Iterations lesson and some minor additions to the notes

--- a/journals/2024_12_05.md
+++ b/journals/2024_12_05.md
@@ -19,7 +19,7 @@
 		- Reference Types
 		- `let trainer =  ["nish", "cathy"]`
 		- `console.log(trainers)` To print out all trainers.
-		- Array Methods:
+		- [[Array Methods]] :
 			- `trainers.push("Safee")` Adds a new element at the end of the  Array.
 			- `let lastTrainer = trainers.pop()` Removes Last element from the Array. Can also be used to Assign to a variable.
 			- `delete trainers[0]` Remove element by index.
@@ -91,8 +91,6 @@
 			  console.log(message);
 			  ```
 		- [[Logical Operators]]
-			-
-			-
 			- Nish Example And
 			  ```javascript
 			  let x = 5;
@@ -132,6 +130,8 @@
 				  
 				  let roundedNumber =  Math.floor(number); // Rounds Down
 				  ```
+				- Math. other functions:
+				  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math
 		- [[Control Flows]]
 			- Nish Example:
 			  ```javascript
@@ -188,7 +188,6 @@
 	- ## [[Exercises]]
 		- [[Exercise 1]]
 			- Task
-			  collapsed:: true
 				- Start with the array `["JavaScript", "is", "fun"]`
 				- Add the string "!" to the end of the array.
 				- Remove the last element from the array.
